--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://rgiri5001:aLWmSCt3FPE3Xbrd@cluster0.um0sy1o.mongodb.net/final-project
+JWT_SECRET=761716745038c0eab05628dac4d8a482
