Redis database imlimented

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URI=mongodb+srv://rgiri5001:aLWmSCt3FPE3Xbrd@cluster0.um0sy1o.mongodb.net/final-project
 JWT_SECRET=761716745038c0eab05628dac4d8a482
+REDIS_HOST=redis-13947.c301.ap-south-1-1.ec2.redns.redis-cloud.com
+REDIS_PORT=13947
+REDIS_PASSWORD=sXIlVYzvSKaa2h3WSGKWdCNtnJ1V1Qh4
